--- a/index.css
+++ b/index.css
@@ -47,7 +47,7 @@ body{
 
 .gameContainer{
 
-    background-color: rgb(227, 242, 197);
+    
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr;
@@ -55,10 +55,11 @@ body{
     justify-items: center;
     width: 40%;
     justify-content: center;
-    margin-top: 30vh;
+    margin-top: 28vh;
     justify-content: center;
     border-radius: 6px;
-    
+    margin-left: 33vw;
+    box-shadow: black ;
 
 }
 .tic_tac_toe_cell{
@@ -68,8 +69,15 @@ body{
     padding-top: 4vh;
     padding-bottom: 4vh;
     font-size: 5rem;
+    background-color: rgb(227, 242, 197);
     
     
+}
+.tic_tac_toe_cell:hover{
+    cursor: pointer;
+    background-color:  rgb(215, 232, 182);
+
+
 }
 .lowerMostText{
     position: fixed;
@@ -81,4 +89,13 @@ body{
     font-family: bottom-text-font;
     opacity: 0.7;
     
+}
+.score{
+    width: 10%;
+    margin-top: 6dvh;
+    margin-bottom: 10dvh;
+    border-radius: 10px;
+    padding: 2vh 2vh 2vh 2vh;
+    border: 5px solid black;
+    font-size: 1.4rem;
 }
